@@ -11,107 +11,43 @@ buildscript {
   }
 }
 
+repositories {
+  maven {
+    url  "https://gitlab.com/api/v4/projects/37512056/packages/maven"
+  }
+}
+
 rootProject.version = "0.0.1"
-group = "com.spaceshift"
+group = "javasabr.mqtt"
 
-allprojects {
-
-  apply plugin: "java"
-  apply plugin: "groovy"
-  apply plugin: "org.springframework.boot"
-
-  //sourceCompatibility = JavaVersion.VERSION_17
-  //targetCompatibility = JavaVersion.VERSION_17
-
+subprojects {
   repositories {
     mavenCentral()
     mavenLocal()
-  }
-
-  dependencies {
-
-    implementation libs.rlib.network
-    implementation libs.rlib.logger.slf4j
-    implementation libs.springboot.starter.core
-    implementation libs.springboot.starter.log4j2
-    implementation libs.project.reactor.core
-    implementation libs.gson
-
-    compileOnly libs.jetbrains.annotations
-    compileOnly libs.jspecify
-    compileOnly libs.lombok
-    annotationProcessor libs.lombok
-
-    // FIXME to remove
-    testImplementation libs.hivemq.mqtt.client
-    // FIXME to remove
-    testImplementation libs.moquette.broker
-    testImplementation libs.spring.test
-    testImplementation libs.spock.core
-    testImplementation libs.spock.spring
-    testImplementation libs.groovy.all
-    testImplementation libs.byte.buddy.dep
-    testImplementation libs.objenesis
-    testCompileOnly libs.jetbrains.annotations
-    testCompileOnly libs.jspecify
-  }
-
-  test {
-    useJUnitPlatform()
-    failOnNoDiscoveredTests = false
-  }
-
-  sourceSets {
-    main {
-      java {
-        srcDirs 'src/main/groovy'
-      }
+    maven {
+      url  "https://gitlab.com/api/v4/projects/37512056/packages/maven"
     }
-    test {
-      java {
-        srcDirs 'src/test/groovy'
-      }
-    }
-  }
-
-  tasks.withType(Test).configureEach {
-    maxParallelForks = 2
-    forkEvery = 100
-    jvmArgs += "--enable-preview"
-  }
-
-  tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += "--enable-preview"
-  }
-
-  tasks.withType(GroovyCompile).configureEach {
-    options.forkOptions.jvmArgs += "--enable-preview"
-  }
-
-  processResources {
-    filter(ReplaceTokens, tokens: [
-    ])
   }
 }
 
-task buildSingleArtifact(type: GradleBuild) {
-  group = 'build'
-  description = 'Build all modules -> Build result artifact'
+tasks.register("buildSingleArtifact", GradleBuild) {
+  group = "build"
+  description = "Build all modules -> Build result artifact"
   tasks = ['build', 'bootJar']
 }
 
-task buildSingleArtifactWithoutTests(type: GradleBuild) {
-  group = 'build'
-  description = 'Build all modules without tests -> Build result artifact'
+tasks.register("buildSingleArtifactWithoutTests", GradleBuild) {
+  group = "build"
+  description = "Build all modules without tests -> Build result artifact"
   tasks = ['classes', 'bootJar']
-}
-
-wrapper {
-  gradleVersion = '6.6-milestone-1'
-  distributionType = Wrapper.DistributionType.ALL
 }
 
 configurations.each {
   it.exclude group: "org.slf4j", module: "slf4j-log4j12"
   it.exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
+}
+
+wrapper {
+  gradleVersion = '9.1.0'
+  distributionType = Wrapper.DistributionType.ALL
 }
